regression/fail/modules.43.sml
signature S =
   sig
      type ('a , 'a) t
   end
